# aff3ct-bfe

./: .gitignore  .gitmodules  README.md  requirements.txt
aff3ct-client/: Aff3ctClient.py  Aff3ctProtocol.py  Aff3ctShell.py  ConsoleMatrixParser.py  README.md  __init__.py  aff3ct-client.py  aff3ct-protocol.py  aff3ct-test.py  generate_fb.sh  generate_pb.sh
aff3ct-server/: .gitignore  CMakeLists.txt  LICENSE  README.md  licenseheader.txt  prepare.sh
aff3ct-server/include/: aff3ct-errc.h
aff3ct-server/src/: Facade_Codec.cpp  Facade_Codec.h  Facade_Codec.hpp  Factory_Codec.cpp  Factory_Codec.hpp  Model.cpp  Model.h  aff3ct-errc.cpp  aff3ct-utils.cpp  aff3ct-utils.h  main.cpp  test.cpp
aff3ct-server/src/aff3ct-addons/: Monitor_BFER_detailed.cpp  Monitor_BFER_detailed.hpp  Source_memory.cpp  Source_memory.hpp
aff3ct-server/src/aff3ct-addons/Factory/: OnlyCodec.cpp  OnlyCodec.hpp
aff3ct-server/src/aff3ct-addons/Launcher/: OnlyCodec.cpp  OnlyCodec.hpp
aff3ct-server/src/aff3ct-addons/Simulation/: CodecRun.cpp  CodecRun.hpp  OnlyCodec.cpp  OnlyCodec.hpp
aff3ct-server/src/aff3ct-addons/factory/: Codec_Generic.cpp  Codec_Generic.hpp  OnlyCodec.cpp  OnlyCodec.hpp
aff3ct-server/src/aff3ct-addons/launcher/: Codec.cpp  Codec.hpp  CodecRun.cpp  CodecRun.hpp  Codec_Generic.cpp  Codec_Generic.hpp  OnlyCodec.cpp  OnlyCodec.hpp
aff3ct-server/src/aff3ct-addons/simulation/: Codec.cpp  Codec.hpp  CodecRun.cpp  CodecRun.hpp  Codec_Generic.cpp  Codec_Generic.hpp  OnlyCodec.cpp  OnlyCodec.hpp
aff3ct-server/unittests/: test_factory_codec.hxx  test_factory_codec_LDPC_7_4.hxx
(+52 files in other folders)
